[gd_scene load_steps=7 format=3 uid="uid://du70aggw06fus"]

[ext_resource type="Texture2D" uid="uid://0nkhcesb8wbp" path="res://Sprites/UI/Button1.png" id="1_4wtbv"]
[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_j4n12"]
[ext_resource type="Texture2D" uid="uid://m6ckccntnoru" path="res://Sprites/UI/Button3.png" id="2_ysg33"]
[ext_resource type="Texture2D" uid="uid://m860as2fk6rv" path="res://Sprites/UI/Button2.png" id="3_4bwp2"]
[ext_resource type="Texture2D" uid="uid://bpt4osveaa7mr" path="res://Sprites/UI/PausedText.png" id="4_td7ks"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sjud3"]
bg_color = Color(0, 0, 0, 0.329412)

[node name="PauseMenu" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j4n12")

[node name="Transparenal" type="Panel" parent="."]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sjud3")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -88.0
offset_right = 104.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2

[node name="PausedText" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -70.0
offset_right = 46.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_td7ks")
stretch_mode = 2

[node name="Resume" type="TextureButton" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -36.0
offset_right = 34.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_4wtbv")
texture_pressed = ExtResource("2_ysg33")
texture_hover = ExtResource("3_4bwp2")

[node name="Label" type="Label" parent="Panel/Resume"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 65.0
offset_bottom = 19.0
text = "RESUME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenu" type="TextureButton" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -6.0
offset_right = 34.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_4wtbv")
texture_pressed = ExtResource("2_ysg33")
texture_hover = ExtResource("3_4bwp2")

[node name="Label" type="Label" parent="Panel/MainMenu"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 65.0
offset_bottom = 19.0
text = "MAIN MENU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerSpeedSlider" type="HSlider" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 21.0
offset_right = 48.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
min_value = 0.05
max_value = 0.25
step = 0.05
value = 0.15

[node name="SFXSlider" type="HSlider" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 36.0
offset_right = 48.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
min_value = -80.0
max_value = 6.0
value = 6.0

[node name="PlayerSpeed" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 102.0
offset_right = 59.0
offset_bottom = 125.0
theme_override_constants/line_spacing = -3
text = "Move
Time"
horizontal_alignment = 1

[node name="Volume" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 19.0
offset_top = 128.0
offset_right = 49.0
offset_bottom = 141.0
text = "Volume"
horizontal_alignment = 1

[node name="CheckButton" type="CheckButton" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = 54.0
offset_right = -17.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
button_pressed = true

[node name="InstaRestart" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 9.0
offset_top = 143.0
offset_right = 60.0
offset_bottom = 166.0
theme_override_constants/line_spacing = -3
text = "Instant
Restart"
horizontal_alignment = 1

[connection signal="mouse_entered" from="Panel/Resume" to="." method="_on_resume_mouse_entered"]
[connection signal="pressed" from="Panel/Resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="Panel/MainMenu" to="." method="_on_main_menu_mouse_entered"]
[connection signal="pressed" from="Panel/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="value_changed" from="Panel/PlayerSpeedSlider" to="." method="_on_player_speed_slider_value_changed"]
[connection signal="value_changed" from="Panel/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="toggled" from="Panel/CheckButton" to="." method="_on_check_button_toggled"]
